--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Please</string>
+    <string name="app_name">Gruiker</string>
     <string name="Open">Open</string>
     <string name="Close">Close</string>
 </resources>
